@@ -309,3 +309,77 @@ void GWEN_Debug_Error_Err(GWEN_LOGGER *lg, GWEN_ERRORCODE err) {
 }
 
 
+#ifdef NO_VARIADIC_MACROS
+void DBG_ERROR(GWEN_LOGGER *dbg_logger, const char *format, ...) {
+  va_list args;
+  char dbg_buffer[256]; 
+  va_start(args, format);
+  snprintf(dbg_buffer, sizeof(dbg_buffer)-1, format, args);
+  dbg_buffer[sizeof(dbg_buffer)-1] = 0; 
+  GWEN_Logger_Log(dbg_logger, GWEN_LoggerLevelError, dbg_buffer);
+  va_end(args);
+}
+
+void DBG_WARN(GWEN_LOGGER *dbg_logger, const char *format, ...) {
+  va_list args;
+  char dbg_buffer[256]; 
+  va_start(args, format);
+  snprintf(dbg_buffer, sizeof(dbg_buffer)-1, format, args);
+  dbg_buffer[sizeof(dbg_buffer)-1] = 0; 
+  GWEN_Logger_Log(dbg_logger, GWEN_LoggerLevelWarning, dbg_buffer);
+  va_end(args);
+}
+
+void DBG_NOTICE(GWEN_LOGGER *dbg_logger, const char *format, ...) {
+  if (GWEN_Logger_GetLevel(dbg_logger)>=GWEN_LoggerLevelNotice) {
+    va_list args;
+    char dbg_buffer[256]; 
+    va_start(args, format);
+    snprintf(dbg_buffer, sizeof(dbg_buffer)-1, format, args);
+    dbg_buffer[sizeof(dbg_buffer)-1] = 0; 
+    GWEN_Logger_Log(dbg_logger, GWEN_LoggerLevelNotice, dbg_buffer);
+    va_end(args);
+  }
+}
+
+void DBG_INFO(GWEN_LOGGER *dbg_logger, const char *format, ...) {
+  if (GWEN_Logger_GetLevel(dbg_logger)>=GWEN_LoggerLevelInfo) {
+    va_list args;
+    char dbg_buffer[256]; 
+    va_start(args, format);
+    snprintf(dbg_buffer, sizeof(dbg_buffer)-1, format, args);
+    dbg_buffer[sizeof(dbg_buffer)-1] = 0; 
+    GWEN_Logger_Log(dbg_logger, GWEN_LoggerLevelInfo, dbg_buffer);
+    va_end(args);
+  }
+}
+
+void DBG_DEBUG(GWEN_LOGGER *dbg_logger, const char *format, ...) {
+# ifndef DISABLE_DEBUGLOG
+  if (GWEN_Logger_GetLevel(dbg_logger)>=GWEN_LoggerLevelDebug) {
+    va_list args;
+    char dbg_buffer[256]; 
+    va_start(args, format);
+    snprintf(dbg_buffer, sizeof(dbg_buffer)-1, format, args);
+    dbg_buffer[sizeof(dbg_buffer)-1] = 0; 
+    GWEN_Logger_Log(dbg_logger, GWEN_LoggerLevelDebug, dbg_buffer);
+    va_end(args);
+  }
+# endif /* DISABLE_DEBUGLOG */
+}
+
+void DBG_VERBOUS(GWEN_LOGGER *dbg_logger, const char *format, ...) {
+# ifndef DISABLE_DEBUGLOG
+  if (GWEN_Logger_GetLevel(dbg_logger)>=GWEN_LoggerLevelVerbous) {
+    va_list args;
+    char dbg_buffer[256]; 
+    va_start(args, format);
+    snprintf(dbg_buffer, sizeof(dbg_buffer)-1, format, args);
+    dbg_buffer[sizeof(dbg_buffer)-1] = 0; 
+    GWEN_Logger_Log(dbg_logger, GWEN_LoggerLevelVerbous, dbg_buffer);
+    va_end(args);
+  }
+# endif /* DISABLE_DEBUGLOG */
+}
+
+#endif /* NO_VARIADIC_MACROS */
