@@ -52,13 +52,17 @@ GWEN_TYPE_UINT32 GWEN_Debug_Snprintf(char *buffer,
                                      GWEN_TYPE_UINT32 size,
                                      const char *fmt, ...);
 
-
-#define DBG_ERROR(dbg_logger, format, args...) if (1){\
+#ifndef NO_VARIADIC_MACROS
+# define DBG_ERROR(dbg_logger, format, args...) if (1){\
   char dbg_buffer[256]; \
   snprintf(dbg_buffer, sizeof(dbg_buffer)-1,\
   __FILE__":%5d: " format  , __LINE__ , ## args); \
   dbg_buffer[sizeof(dbg_buffer)-1]=0; \
  GWEN_Logger_Log(dbg_logger, GWEN_LoggerLevelError, dbg_buffer);};
+#else /* #ifndef NO_VARIADIC_MACROS */
+GWENHYWFAR_API 
+void DBG_ERROR(GWEN_LOGGER *dbg_logger, const char *format, ...);
+#endif /* #ifndef NO_VARIADIC_MACROS */
 
 #define DBG_ERROR_ERR(dbg_logger, dbg_err) {\
  char dbg_buffer[256]; \
@@ -69,13 +73,17 @@ GWEN_TYPE_UINT32 GWEN_Debug_Snprintf(char *buffer,
   dbg_buffer[sizeof(dbg_buffer)-1]=0; \
  GWEN_Logger_Log(dbg_logger, GWEN_LoggerLevelError, dbg_buffer);};
 
-
-#define DBG_WARN(dbg_logger, format, args...) {\
+#ifndef NO_VARIADIC_MACROS
+# define DBG_WARN(dbg_logger, format, args...) {\
   char dbg_buffer[256]; \
   snprintf(dbg_buffer, sizeof(dbg_buffer)-1,\
   __FILE__":%5d: " format  , __LINE__ , ## args); \
   dbg_buffer[sizeof(dbg_buffer)-1]=0; \
  GWEN_Logger_Log(dbg_logger, GWEN_LoggerLevelWarning, dbg_buffer);};
+#else /* #ifndef NO_VARIADIC_MACROS */
+GWENHYWFAR_API 
+void DBG_WARN(GWEN_LOGGER *dbg_logger, const char *format, ...);
+#endif /* #ifndef NO_VARIADIC_MACROS */
 
 #define DBG_WARN_ERR(dbg_logger, dbg_err) {\
  char dbg_buffer[256]; \
@@ -87,13 +95,18 @@ GWEN_TYPE_UINT32 GWEN_Debug_Snprintf(char *buffer,
  GWEN_Logger_Log(dbg_logger, GWEN_LoggerLevelWarning, dbg_buffer);};
 
 
-#define DBG_NOTICE(dbg_logger, format, args...) \
+#ifndef NO_VARIADIC_MACROS
+# define DBG_NOTICE(dbg_logger, format, args...) \
  if (GWEN_Logger_GetLevel(dbg_logger)>=GWEN_LoggerLevelNotice) {\
  char dbg_buffer[256]; \
  snprintf(dbg_buffer, sizeof(dbg_buffer)-1,\
  __FILE__":%5d: " format  , __LINE__ , ## args); \
   dbg_buffer[sizeof(dbg_buffer)-1]=0; \
  GWEN_Logger_Log(dbg_logger, GWEN_LoggerLevelNotice, dbg_buffer);};
+#else /* #ifndef NO_VARIADIC_MACROS */
+GWENHYWFAR_API 
+void DBG_NOTICE(GWEN_LOGGER *dbg_logger, const char *format, ...);
+#endif /* #ifndef NO_VARIADIC_MACROS */
 
 #define DBG_NOTICE_ERR(dbg_logger, dbg_err) \
  if (GWEN_Logger_GetLevel(dbg_logger)>=GWEN_LoggerLevelNotice) {\
@@ -106,13 +119,18 @@ GWEN_TYPE_UINT32 GWEN_Debug_Snprintf(char *buffer,
  GWEN_Logger_Log(dbg_logger, GWEN_LoggerLevelNotice, dbg_buffer);};
 
 
-#define DBG_INFO(dbg_logger, format, args...) \
+#ifndef NO_VARIADIC_MACROS
+# define DBG_INFO(dbg_logger, format, args...) \
  if (GWEN_Logger_GetLevel(dbg_logger)>=GWEN_LoggerLevelInfo) {\
   char dbg_buffer[256]; \
  snprintf(dbg_buffer, sizeof(dbg_buffer)-1,\
  __FILE__":%5d: " format  , __LINE__ , ## args); \
   dbg_buffer[sizeof(dbg_buffer)-1]=0; \
  GWEN_Logger_Log(dbg_logger, GWEN_LoggerLevelInfo, dbg_buffer);};
+#else /* #ifndef NO_VARIADIC_MACROS */
+GWENHYWFAR_API 
+void DBG_INFO(GWEN_LOGGER *dbg_logger, const char *format, ...);
+#endif /* #ifndef NO_VARIADIC_MACROS */
 
 #define DBG_INFO_ERR(dbg_logger, dbg_err) \
  if (GWEN_Logger_GetLevel(dbg_logger)>=GWEN_LoggerLevelInfo) {\
@@ -129,7 +147,8 @@ GWEN_TYPE_UINT32 GWEN_Debug_Snprintf(char *buffer,
 
 #ifndef DISABLE_DEBUGLOG
 
-#define DBG_DEBUG(dbg_logger, format, args...) \
+# ifndef NO_VARIADIC_MACROS
+#  define DBG_DEBUG(dbg_logger, format, args...) \
  if (GWEN_Logger_GetLevel(dbg_logger)>=GWEN_LoggerLevelDebug) {\
  char dbg_buffer[256]; \
  snprintf(dbg_buffer, sizeof(dbg_buffer)-1,\
@@ -137,7 +156,16 @@ GWEN_TYPE_UINT32 GWEN_Debug_Snprintf(char *buffer,
   dbg_buffer[sizeof(dbg_buffer)-1]=0; \
  GWEN_Logger_Log(dbg_logger, GWEN_LoggerLevelDebug, dbg_buffer);};
 
-#define DBG_DEBUG_ERR(dbg_logger, dbg_err) \
+#  define DBG_VERBOUS(dbg_logger, format, args...) \
+ if (GWEN_Logger_GetLevel(dbg_logger)>=GWEN_LoggerLevelVerbous) {\
+ char dbg_buffer[256]; \
+ snprintf(dbg_buffer, sizeof(dbg_buffer)-1,\
+ __FILE__":%5d: " format  , __LINE__ , ## args); \
+  dbg_buffer[sizeof(dbg_buffer)-1]=0; \
+ GWEN_Logger_Log(dbg_logger, GWEN_LoggerLevelVerbous, dbg_buffer);};
+# endif /* #ifndef NO_VARIADIC_MACROS */
+
+# define DBG_DEBUG_ERR(dbg_logger, dbg_err) \
  if (GWEN_Logger_GetLevel(dbg_logger)>=GWEN_LoggerLevelDebug) {\
  char dbg_buffer[256]; \
  char dbg_errbuff[256]; \
@@ -147,16 +175,7 @@ GWEN_TYPE_UINT32 GWEN_Debug_Snprintf(char *buffer,
   dbg_buffer[sizeof(dbg_buffer)-1]=0; \
  GWEN_Logger_Log(dbg_logger, GWEN_LoggerLevelDebug, dbg_buffer);};
 
-
-#define DBG_VERBOUS(dbg_logger, format, args...) \
- if (GWEN_Logger_GetLevel(dbg_logger)>=GWEN_LoggerLevelVerbous) {\
- char dbg_buffer[256]; \
- snprintf(dbg_buffer, sizeof(dbg_buffer)-1,\
- __FILE__":%5d: " format  , __LINE__ , ## args); \
-  dbg_buffer[sizeof(dbg_buffer)-1]=0; \
- GWEN_Logger_Log(dbg_logger, GWEN_LoggerLevelVerbous, dbg_buffer);};
-
-#define DBG_VERBOUS_ERR(dbg_logger, dbg_err) \
+# define DBG_VERBOUS_ERR(dbg_logger, dbg_err) \
  if (GWEN_Logger_GetLevel(dbg_logger)>=GWEN_LoggerLevelVerbous) {\
  char dbg_buffer[256]; \
  char dbg_errbuff[256]; \
@@ -170,16 +189,22 @@ GWEN_TYPE_UINT32 GWEN_Debug_Snprintf(char *buffer,
 
 #else
 
-#define DBG_DEBUG(dbg_logger, format, args...)
+# ifndef NO_VARIADIC_MACROS
+#  define DBG_DEBUG(dbg_logger, format, args...)
+#  define DBG_VERBOUS(dbg_logger, format, args...)
+# endif /* ifndef NO_VARIADIC_MACROS */
 
-#define DBG_DEBUG_ERR(dbg_logger, dbg_err)
-
-#define DBG_VERBOUS(dbg_logger, format, args...)
-
-#define DBG_VERBOUS_ERR(dbg_logger, dbg_err)
+# define DBG_DEBUG_ERR(dbg_logger, dbg_err)
+# define DBG_VERBOUS_ERR(dbg_logger, dbg_err)
 
 #endif /* DISABLE_DEBUGLOG */
 
+#ifdef NO_VARIADIC_MACROS
+GWENHYWFAR_API 
+void DBG_DEBUG(GWEN_LOGGER *dbg_logger, const char *format, ...);
+GWENHYWFAR_API 
+void DBG_VERBOUS(GWEN_LOGGER *dbg_logger, const char *format, ...);
+#endif /* #ifdef NO_VARIADIC_MACROS */
 
 
 #ifdef __cplusplus
